--- a/DjangoTutorial-main/studybud/base/templates/base/job_list.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/job_list.html
@@ -8,7 +8,7 @@
 
     <!-- Loop through all jobs -->
     {% for job in jobs %}
-    <div class="job-item">
+    <div class="job-item" data-job-id="{{ job.id }}">
         {% if request.user == job.host %}
         <a href="{% url 'update-Job' job.id %}">Edit</a>
         <a href="{% url 'delete-Job' job.id %}">Delete</a>
@@ -18,10 +18,10 @@
         <h5>{{ job.id }} -- <a href="{% url 'job' job.id %}">Position: {{ job.name }}</a></h5>
         <small>{{ job.field.name }}</small>
         {% if job.host.userprofile and job.host.userprofile.profile_picture %}
-    <img src="{{ job.host.userprofile.profile_picture.url }}" alt="Company Logo">
-    {% else %}
+        <img src="{{ job.host.userprofile.profile_picture.url }}" alt="Company Logo">
+        {% else %}
         <img src="{% static 'default.jpg' %}" alt="Company Logo">
-    {% endif %}
+        {% endif %}
         <hr>
     </div>
     {% endfor %}
@@ -37,7 +37,6 @@
 const jobItems = document.querySelectorAll('.job-item');
 const denyBut = document.querySelector('#leftButton');
 const acceptBut = document.querySelector('#rightButton');
-const test = document.getElementById('Test');
 let currentJobIndex = jobItems.length - 1;
 
 // Initializing Buttons
@@ -56,10 +55,26 @@ function denyApp() {
     
 
 function acceptApp() {
-    jobItems[currentJobIndex].classList.remove('active');
-    jobItems[currentJobIndex].remove();  
-    currentJobIndex = (currentJobIndex + 1) % jobItems.length;
-    jobItems[currentJobIndex].classList.add('active');    
+    
+    const jobId = jobItems[currentJobIndex].dataset.jobId;
+
+    fetch(`/apply-job/`, {
+        method: 'POST',
+        headers: {
+            'Content-Type': 'application/json',
+            'X-CSRFToken': '{{ csrf_token }}'
+        },
+        body: JSON.stringify({ job_id: jobId })
+    }).then(response => {
+        if (response.ok) {
+            jobItems[currentJobIndex].classList.remove('active');
+            jobItems[currentJobIndex].remove();
+            currentJobIndex = (currentJobIndex + 1) % jobItems.length;
+            jobItems[currentJobIndex].classList.add('active');
+        } else {
+            alert('Error applying to job');
+        }
+    });
 }
 
 </script>
