--- a/DjangoTutorial-main/studybud/base/templates/base/profile.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/profile.html
@@ -70,13 +70,12 @@
     {% endif %}
 {% endif %}
 {% if user.is_authenticated and user.userprofile.user_type == 'employee' %}
-<h3>Applied Jobs:</h3>
+<h3>Saved Jobs:</h3>
     {% if user.userprofile.applied_jobs.exists %}
         <ul>
             {% for job in user.userprofile.applied_jobs.all %}
                 <li>
                     <a href="{% url 'job' job.id %}">{{ job.name }}</a>
-                    (Applied {{ job.date_applied|timesince }} ago)
                 </li>
             {% endfor %}
         </ul>
