--- a/DjangoTutorial-main/studybud/static/css/jobFeed.css
+++ b/DjangoTutorial-main/studybud/static/css/jobFeed.css
@@ -3,7 +3,6 @@
     height: 150px;
     font-size: 75px;
 }
-
 #leftButton {
     margin-right: 250px;
     color: red;
@@ -12,7 +11,6 @@
     background-color: red;
     color: black;
 }
-
 #rightButton {
     margin-left: 250px;
     color: green;
@@ -21,26 +19,29 @@
     background-color: green;
     color: black;
 }
-
 .job-container {
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
 }
-
 .job-item {
   display: none;
 }
-
 .job-item.active {
   display: block;
 }
-
 #emptyContainer{
   display: none;
 }
-
 .job-container > div {
 width:20% 60% 20%;
+}
+#emptyContainer{
+  display: block;
+  text-align: center;
+  border: 1px solid black;
+  height: 200px;
+  width: 400px;
+  margin: auto;
 }
