More CSS Updates

--- a/DjangoTutorial-main/studybud/base/templates/base/home.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/home.html
@@ -9,9 +9,15 @@
         display: grid;
         grid-template-columns: 3fr 1fr;
     }
+    .applyNow {
+        display: block;
+        text-align: center;
+        border: 1px solid black;
+        height: 200px;
+        width: 400px;
+        margin: auto;
+}
 </style>
-
-
 <div class="home-container">
 
     <div>
