--- a/DjangoTutorial-main/studybud/base/templates/base/create_job.html
+++ b/DjangoTutorial-main/studybud/base/templates/base/create_job.html
@@ -1,46 +1,112 @@
 {% extends 'main.html' %}
 
-
 {% block content %}
 
 <style>
-    .room-container{
+    .room-container {
         display: grid;
-        grid-template-columns:3fr;;
+        grid-template-columns: 3fr;
+    }
+
+    /* Style for the modal */
+    .modal {
+        display: none; /* Hidden by default */
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0, 0, 0); /* Fallback color */
+        background-color: rgba(0, 0, 0, 0.4); /* Black with opacity */
+        padding-top: 60px;
+    }
+
+    /* Modal Content */
+    .modal-content {
+        background-color: #fefefe;
+        margin: 5% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+        max-width: 400px;
+    }
+
+    /* The Close Button */
+    .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
     }
 </style>
 
 <div class="room-container">
-
     <div>
-        <h1 style="text-align:center;">{{job.name}}</h1>
-
-
-        <p>{{job.description}}</p>
-
+        <h1 style="text-align:center;">{{ job.name }}</h1>
+        <p>{{ job.description }}</p>
 
         <div class="comment-wrapper">
-            <h3>Apply</h3>
-            <hr>
+            {% if user.is_authenticated %}
+                {% if user.userprofile.user_type == 'employee' %}
+                    <hr>
+                    <!-- Apply button -->
+                    <button id="applyButton">Apply</button>
+                {% endif %}
+            {% endif %}
 
             {% for message in room_messages %}
-
-            <div>
-                {% if request.user == message.user %}
-                <a href="{% url 'delete-message' message.id %}">Delete</a>
-
-                {% endif %}
-                <small>@{{message.user}} {{message.created|timesince}} ago</small>
-
-                <p>{{message.body}}</p>
-            </div>
-
+                <div>
+                    {% if request.user == message.user %}
+                        <a href="{% url 'delete-message' message.id %}">Delete</a>
+                    {% endif %}
+                    <small>@{{ message.user }} {{ message.created|timesince }} ago</small>
+                    <p>{{ message.body }}</p>
+                </div>
             {% endfor %}
         </div>
 
-    </div>  
-
+    </div>
 </div>
 
+<!-- The Modal -->
+<div id="applyModal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Resume sent to employer. They will be in contact!</h2>
+    </div>
+</div>
+
+<script>
+    // Get modal and button
+    var modal = document.getElementById("applyModal");
+    var btn = document.getElementById("applyButton");
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the user clicks the apply button, open the modal
+    btn.onclick = function() {
+        modal.style.display = "block";
+    }
+
+    // When the user clicks the close button (x), close the modal
+    span.onclick = function() {
+        modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none";
+        }
+    }
+</script>
 
 {% endblock %}
