--- a/DjangoTutorial-main/studybud/templates/navbar.html
+++ b/DjangoTutorial-main/studybud/templates/navbar.html
@@ -3,7 +3,6 @@
 </a>
 
 <form method="GET" action="{% url 'home' %}">
-    <input type="text" name="q" placeholder="Search Jobs..."/>
 
 </form>
 
@@ -13,7 +12,7 @@
 <a class ="btn btn-logout navbar-btn" type ="button" href="{% url 'logout' %}">Logout</a>
 
 {% else %}
-<a class ="btn btn-login navbar-btn" type ="button" href="{% url 'login' %}">Login</a>
+<h3>Welcome!</h3>
 
 {% endif %}
 
