Update to color

--- a/DjangoTutorial-main/studybud/static/css/jobFeed.css
+++ b/DjangoTutorial-main/studybud/static/css/jobFeed.css
@@ -2,6 +2,7 @@
     width: 150px;
     height: 150px;
     font-size: 75px;
+    background-color: #D3D0CB;
 }
 #leftButton {
     margin-right: 250px;
